# codeforces

./: CMakeLists.txt  README.md
labs/: lab_map.cpp
problems/1326/: 1326B.cpp
problems/1330/: 1330A.cpp
problems/1331/: 1331D.cpp
problems/1333/: 1333A.cpp
problems/1334/: 1334A.cpp  1334B.cpp  1334C.cpp
problems/1338/: 1338A.cpp  1338A_naive.cpp
problems/1339/: 1339A.cpp  1339B.cpp
problems/227/: 227B.cpp  227B_2.cpp  227B_naive.cpp  227B_naive_2.cpp
problems/263/: 263A.cpp  263A_naive.cpp
problems/69/: 69A.cpp
tools/: test_tool.cpp
