cmake_minimum_required(VERSION 3.10)
project(codeforces)

add_executable(69A problems/69/69A.cpp)
add_executable(227B problems/227/227B.cpp)
add_executable(227B_2 problems/227/227B_2.cpp)
add_executable(227B_naive problems/227/227B_naive.cpp)
add_executable(227B_naive_2 problems/227/227B_naive_2.cpp)
add_executable(263A problems/263/263A.cpp)
add_executable(263A_naive problems/263/263A_naive.cpp)
add_executable(1331D problems/1331/1331D.cpp)
add_executable(1330A problems/1330/1330A.cpp)
add_executable(1326B problems/1326/1326B.cpp)

add_executable(lab_set labs/lab_set.cpp)
add_executable(lab_map labs/lab_map.cpp)
