cmake_minimum_required(VERSION 3.10)
project(codeforces)

add_executable(1339B problems/1339/1339B.cpp)
add_executable(1339A problems/1339/1339A.cpp)

add_executable(1338A problems/1338/1338A.cpp)
add_executable(1338A_naive problems/1338/1338A_naive.cpp)

add_executable(1334A problems/1334/1334A.cpp)
add_executable(1334B problems/1334/1334B.cpp)
add_executable(1334C problems/1334/1334C.cpp)

add_executable(1333A problems/1333/1333A.cpp)
add_executable(69A problems/69/69A.cpp)
add_executable(227B problems/227/227B.cpp)
add_executable(227B_2 problems/227/227B_2.cpp)
add_executable(227B_naive problems/227/227B_naive.cpp)
add_executable(227B_naive_2 problems/227/227B_naive_2.cpp)
add_executable(263A problems/263/263A.cpp)
add_executable(263A_naive problems/263/263A_naive.cpp)
add_executable(1331D problems/1331/1331D.cpp)
add_executable(1330A problems/1330/1330A.cpp)
add_executable(1326B problems/1326/1326B.cpp)

add_executable(lab_set labs/lab_set.cpp)
add_executable(lab_map labs/lab_map.cpp)
